# mini-gameboy-emulator-rustlab

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  rust-toolchain
.cargo/: config.toml
game-rom/: game.gb
gb/: Cargo.toml
gb-desktop/: Cargo.toml  index.html
gb-desktop/src/: emscripten.rs  main.rs
gb/src/: lib.rs
rom/: game.ihx  game.map  game.noi  game.sym
src/: desktop.rs  web.rs
src/gameboy/: gpu.rs  mmu.rs  mod.rs
src/gameboy/cpu/: data.rs  ld.rs  misc.rs  mod.rs  registers.rs  stack.rs  z80-js
src/webgpu-version/: webgpu-cargo.toml  webgpu-mod.rs
