[package]
name = "gb-desktop"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gb_desktop"
path = "src/main.rs"

[dependencies]
gb = { path = "../gb" }
glutin = { version = "0.28.0" }
gl = { version = "0.14.0" }
libc = { version = "0.2.126" }