[package]
name = "gb-desktop"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gb_desktop"
path = "src/main.rs"

[dependencies]
gb = { path = "../gb" }
winit = { version = "0.29.3", default-features = false, features = ["rwh_05", "serde"] }
wgpu = "0.18.0"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
pollster = "0.3"